Fixed sneaky new line in encoding
Also protocol tweaks